# electron_study

./: .gitattributes  .gitignore  package-lock.json  package.json
docs/: Electron优劣.xmind  Electron开发.txt
html/: index.html
main/: main.js
natives/: .gitignore  .gn  BUILD.gn  common.props  dispatch_for_ide.py  library_template.gni  natives.sln
natives/buildtools/: BUILD.gn  BUILDCONFIG.gn
natives/buildtools/toolchain/: BUILD.gn  setup_toolchain.py
natives/docs/: build_cmd.txt  gn_help.txt  gn说明.xmind  ninja_help.txt
natives/elecstudy/: cpp.hint  elecstudy.cpp  elecstudy.h  elecstudy.vcxproj  elecstudy.vcxproj.filters
natives/modules/: BUILD.gn
natives/modules/ffapi-study/: ffapi_study.cpp  ffapi_study.gni  ffapi_study.h  framework.h
tools/: install_electron_for_platform.py
