# Copyright (c) 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This is the root build file for GN. GN will start processing by loading this
# file, and recursively load all dependencies until all dependencies are either
# resolved or known not to exist (which will cause the build to fail). So if
# you add a new build file, there must be some path of dependencies from this
# file to your new one or GN won't know about it.

import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")
import("//build/util/generate_wrapper.gni")

if (is_android) {
  import("//build/config/android/config.gni")
}

declare_args() {
  # A list of extra dependencies to add to the root target. This allows a
  # checkout to add additional targets without explicitly changing any checked-
  # in files.
  root_extra_deps = []
}

if (is_official_build) {
  # An official (maximally optimized!) component (optimized for build times)
  # build doesn't make sense and usually doesn't work.
  assert(!is_component_build)
}

# This file defines the following two main targets:
#
# "gn_all" is used to create explicit dependencies from the root BUILD.gn to
# each top-level component that we wish to include when building everything via
# "all". This is required since the set of targets built by "all" is determined
# automatically based on reachability from the root BUILD.gn (for details, see
# crbug.com/503241). Builders should typically use "all", or list targets
# explicitly, rather than relying on "gn_all".
#
# "gn_visibility": targets that are normally not visible to top-level targets,
# but are built anyway by "all". Since we don't want any such targets, we have
# this placeholder to make sure hidden targets that aren't otherwise depended
# on yet are accounted for.

group("gn_all") {
  #testonly = true

  deps = [
    # Vestas[
    "//modules:ffapi_study",
    #]
  ]

  if (is_win) {
    #deps += [ "//chrome/credential_provider" ]
  }

  if (is_mac) {
    #deps += [ "//chrome/installer/gcapi_mac:gcapi_example" ]
  }
}

if (!is_ios) {

  # This target contains only a small subset of the web tests,
  # and is useful for testing with the regular isolate mechanism.
  # To run the full web test suite you need to use
  # :blink_web_tests_exparchive, above, instead.
  #generate_wrapper("blink_web_tests") {
  #  testonly = true
  #  wrapper_script = "${root_build_dir}/bin/run_blink_web_tests"
  #  executable = "//third_party/blink/tools/run_web_tests.py"
  #  executable_args = []
  #
  #  if (is_debug) {
  #    executable_args += [ "--debug" ]
  #  } else {
  #    executable_args += [ "--release" ]
  #  }
  #
  #  data_deps = [
  #    ":layout_test_data_mojo_bindings",
  #  ]
  #
  #  data = [
  #    "//testing/scripts/common.py",
  #  ]
  #}
}

# Because of the source assignment filter, many targets end up over-filtering
# their sources if the output directory contains a platform name. Assert that
# this doesn't happen. http://crbug.com/548283
template("assert_valid_out_dir") {
  # List copied from //build/config/BUILDCONFIG.gn.
  set_sources_assignment_filter([
                                  "*\bandroid/*",
                                  "*\bchromeos/*",
                                  "*\bcocoa/*",
                                  "*\bios/*",
                                  "*\blinux/*",
                                  "*\bmac/*",
                                  "*\bposix/*",
                                  "*\bwin/*",
                                ])
  assert(target_name != "")  # Mark as used.
  sources = invoker.actual_sources
  assert(
      sources == invoker.actual_sources,
      "Do not use a platform name in your output directory (found \"$root_build_dir\"). http://crbug.com/548283")
}

assert_valid_out_dir("_unused") {
  actual_sources = [ "$root_build_dir/foo" ]
}
